<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.diskstation.ammon.gpsrunner.ui.OverviewFragment"
    android:id="@+id/linearLayout"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/mapFragment"
        tools:context="me.diskstation.ammon.gpsrunner.ui.DrawerActivity"
        android:layout_weight="1" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/controlButton" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/distanceLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:id="@+id/distanceText"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_dummy"
            android:id="@+id/distanceView"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/durationLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:id="@+id/durationText"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_dummy"
            android:id="@+id/durationView"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currentVelocityLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/currentVelocity"
            android:id="@+id/currentVelocityText"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/currentVelocity_dummy"
            android:id="@+id/currentVelocityView" />
    </LinearLayout>

</LinearLayout>
